# geodepot-api

./: .gitignore  CMakeLists.txt  CMakeLists_tests.txt  CMakePresets.json  NOTICE  README.md  bumpver.toml  justfile  pyproject.toml
.github/workflows/: release.yaml
apps/: CMakeLists.txt
apps/get/: CMakeLists.txt  get.cpp
apps/init/: CMakeLists.txt  init.cpp
geodepot-cmake/: CMakeLists.txt  GeoDepot.cmake  README.md
geodepot-cmake/tests/: CMakeLists.txt  test_geodepot_cmake.cpp
geodepot-py/: CMakeLists.txt  README.md
geodepot-py/src/: geodepot-py.cpp
geodepot-py/src/geodepot/: __init__.py
geodepot-py/src/geodepot_api/: __init__.py
geodepot-py/tests/: test_geodepot.py
geodepot-rs/: Cargo.toml
geodepot-rs/src/: lib.rs
include/geodepot/: geodepot.h
include/untar/: untar.h
src/: CMakeLists.txt
src/geodepot/: CMakeLists.txt  geodepot.cpp
tests/: CMakeLists.txt  test_geodepot.cpp  test_sandbox.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp
